Closed Bug 901200 Opened 11 years ago Closed 11 years ago

Some tier-3 xpcstubs are broken since (probably) bug 779473

Categories

(Core :: XPCOM, defect)

24 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26
Tracking Status
firefox24 --- fixed
firefox25 --- fixed
firefox26 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

I got the same kind of error as bug 867914 when building on linux sparc and ia64.

Errors look like this:
../../../../../../dist/include/xptcstubsdef.inc: In member function 'virtual nsresult nsXPTCStubBase::Stub3()':
../../../../../../dist/include/xptcstubsdef.inc:1:1: error: cannot convert 'int' to 'nsresult' in return
Attachment #785351 - Flags: review?(benjamin) → review+
Comment on attachment 785351 [details] [diff] [review]
Change SharedStub definition in tier-3 xptcstubs to better fit reality and make the compiler happy now that nsresult is an enum

[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 779473
User impact if declined: Build fails on some tier-3 platforms. Would be nice to have on ESR24.
Testing completed (on m-c, etc.): tested on various debian architectures
Risk to taking this patch (and alternatives if risky): NPOTB
String or IDL/UUID changes made by this patch: None
Attachment #785351 - Flags: approval-mozilla-beta?
Attachment #785351 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/524c84f5a735
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Attachment #785351 - Flags: approval-mozilla-beta?
Attachment #785351 - Flags: approval-mozilla-beta+
Attachment #785351 - Flags: approval-mozilla-aurora?
Attachment #785351 - Flags: approval-mozilla-aurora+
Assuming no verification needed here. Please add the verifyme keyword and remove the [qa-] whiteboard tag to request verification.
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: