Bug 901200 - Change SharedStub definition in tier-3 xptcstubs to better fit reality and make the compiler happy now that nsresult is an enum. r=bsmedberg, a=lsblakk